Closed Bug 100568 Opened 24 years ago Closed 24 years ago

[fix] images in percentage-width table cell are not wrapping, causing gross incompatibility with IE and Nav on some pages

Categories

(Core :: Layout, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: waterson, Assigned: attinasi)

References

()

Details

(Keywords: regression, Whiteboard: PDT+ [ETA: 9/26/01])

Attachments

(2 files)

The buttons in the top-left table cell used to wrap to fit comfortably. They now (almost) all want to appear on the same line. This worked in a build from the morning of 2001-09-17, and was broken in a build from the morning of 2001-09-18. Marc, could you take a look?
Keywords: regression
Attached file Reduced testcase
*** Bug 100592 has been marked as a duplicate of this bug. ***
new summary, new kwd, looking for reviews and approvals to checkin.
Status: NEW → ASSIGNED
Keywords: nsbranch
Summary: iBench buttons have gotten goofy → [fix] images in percentage-width table cell are not wrapping, causing gross incompatibility with IE and Nav on some pages
Comment on attachment 49965 [details] [diff] [review] PATCH: stop treating percentage widths on table cells as unconstrained. sr=waterson
Attachment #49965 - Flags: superreview+
Looks like this has a super review. If all of the reviews are done and you think this should be considered by the PDT for eMojo please mark with the nsbranch+ keyword so the PDT will review it for Netscape branch check in approval.
Comment on attachment 49965 [details] [diff] [review] PATCH: stop treating percentage widths on table cells as unconstrained. r=kmcclusk@netscape.com
Attachment #49965 - Flags: review+
Marking nsbranch+.
Keywords: nsbranchnsbranch+
Whiteboard: Has review/super-review waiting for approval from PDT
ok, lets get this in on the 0.9.4 branch. a=chofmann
Whiteboard: Has review/super-review waiting for approval from PDT → PDT+
checked into trunk: nsLineLayout 3.105
I have the same problem only it has nothing to do with percentage-width cells. Consecutive images in table cells don't wrap correctly *if* the DOCTYPE is HTML 4.0; if it is XHTML, however, they do. I'm currently using build 20010923121 on Debian Linux. A test case is at http://www.init.se/~jonas/frameimgs.html (the frameset doesn't affect the problem). Is this the same bug or should I open a new?
CCing Hixie, merely because I have a faint recollection that there was a bug in this area that was WONTFIXED because we were doing the right thing. I may be way off base, however... Gerv
Whiteboard: PDT+ → PDT+ [ETA: 9/26/01]
Jonas, I cannot get to your testsite so I cannot tell if the problem is the same. I can tell you that we try, in Quirks mode only, to keep images together in a cell (eg. no wrapping) if the table cell has no width specified. This is an IE-compatibility quirk, hence the Quirks mode only bit. If you attach your testcase to the bug or email me directly I will see if you have yet another slant on this seeming endless problem.
Fix checked into 0.9.4 branch - marking FIXED
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Jonas, I got to your site now. The problem in the left pane is indeed related. I opened bug 101674 for the problem - I'll investigate there.
Verified with the Oct 4th builds: Mac OS X (2001-10-04-04) and Windows ME (2001-10-04-06)
Keywords: vtrunk
Verified on Linux RedHat 6.2 Oct 4th branch build (2001-10-04-04).
Blocks: 116651
No longer blocks: 116651
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: