Don't allow consecutive images to wrap in table cells with percentage width. r=kmcclusk sr=waterson b=100568